# network-testing

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: main.py  utils.py
src/scripts/: manage_tc.py
src/tests/: conftest.py  test_aiohttp_failure.py  test_aiohttp_success.py  test_httpx_failure.py  test_httpx_success.py  test_requests_failure.py  test_requests_success.py
