[tool.poetry]
name = "network-testing"
version = "0.1.0"
description = ""
authors = ["David Vartanian <davidvartanian@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
requests = "^2.32.3"
pytest = "^8.2.2"
fastapi = "^0.111.0"
pytest-asyncio = "^0.23.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
