[tool.poetry]
name = "network-testing"
version = "0.1.0"
description = ""
authors = ["David Vartanian <davidvartanian@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
requests = "^2.32.3"
pytest = "^8.2.2"
fastapi = "^0.111.0"
pytest-asyncio = "^0.23.7"
aiohttp = "^3.9.5"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.1"
types-requests = "^2.32.0.20240712"

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
